# flask_postgres_container

./: README.rst  docker-compose.yml  pyproject.toml  requirements.txt
flaskr/: Dockerfile.flask  __init__.py  commands.py  config.py  database.py  postgres.py  requirements.txt
flaskr/auth/: auth.py
flaskr/blog/: blog.py
flaskr/config/config/: db.yaml
flaskr/models/: __init__.py  models.py
hajde/: pyvenv.cfg
instance/: flaskr.sqlite
